--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="script.js"></script>
 </head>
 <body>
-    hello afer modificatio
+    hello afer second modification
     
 </body>
 </html>
